--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <link rel="stylesheet" type="text/css" href="css/vendors/jquery.mobile.inline-svg-1.4.4.min.css" />
         <link rel="stylesheet" type="text/css" href="css/vendors/jquery.mobile-1.4.4.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+
+        <!--Scripts-->
+        <script type="text/javascript" src="phonegap.js"></script>
+        <script type="text/javascript" src="js/vendors/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/vendors/jquery.mobile-1.4.4.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
         <title>StolenBike</title>
     </head>
     <body>
@@ -19,7 +25,7 @@
             <a href="#index" data-role="button">Index</a>
             <a href="#welcome" data-transition="pop" data-rel="dialog" data-role="button">Willkommen</a>
             <a href="#login" data-role="button">Login</a>
-            <a href="#map" data-role="button">Map</a>
+            <a href="#map" data-rel="map" data-role="button" data-transition="slide">Map</a>
             <a href="#event" data-role="button">Melden</a>
             <a href="#myplace" data-role="button">Mein Ort</a>
         </div>
@@ -127,7 +133,7 @@
           </div>
           <div data-role="content" data-theme="d">
             <div id="map-canvas"></div>
-            <a href="#event" data-url="event" data-role="button">DIEBSTAHL MELDEN</a>
+            <a id="report-button" href="#event" data-url="event" data-role="button">DIEBSTAHL MELDEN</a>
           </div><!-- /content -->
         </div>
         <!-- Page Meldung -->
@@ -170,17 +176,12 @@
             <a href="#map" data-url="map" data-role="button">Speichern</a>
           </div><!-- /content -->
         </div>
-
-        <!--Scripts-->
-        <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/vendors/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/vendors/jquery.mobile-1.4.4.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
         <script type="text/javascript">
-          jQuery(function($){
+          $(document).bind('pagecreate', function(){
             app.init();
           });
         </script>
+
     </body>
 </html>
